k8s/installation/template/addons/ingress/00-ingress-namespace.yaml
# namespace for ingress-controller
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
