k8s/installation/template/addons/ingress/37-ingress-controller-service.yaml
# Service - controller
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    helm.sh/chart: ingress-nginx-3.1.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.35.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
  - name: http
    port: 80
    nodePort: 31080
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    nodePort: 31443
    protocol: TCP
    targetPort: https
  - name: mysql
    port: 3306
    nodePort: 33306
    protocol: TCP
    targetPort: mysql
  - name: mysqlc-read
    port: 3316
    nodePort: 33316
    protocol: TCP
    targetPort: mysqlc-read
  - name: mysqlc-master
    port: 3317
    nodePort: 33317
    protocol: TCP
    targetPort: mysqlc-master
